# m4againrs

./: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_e2e.rs
python/: Cargo.toml  m4againrs.pyi  pyproject.toml
python/src/: lib.rs
python/testdata/: regenerate.sh  tagged_tone.m4a
python/tests/: test_python_bindings.py
src/: aac.rs  aac_codebooks.rs  bits.rs  error.rs  gain.rs  lib.rs  mp4.rs  python.rs
testdata/: aac_lc_51.m4a  aac_lc_transient.m4a  bear_aac_main.m4a  bear_he_aac_v1.m4a  bear_he_aac_v2_implicit.m4a  he_aacv2.m4a  he_aacv2_faststart.m4a  regenerate.sh  tagged_tone.m4a  test_faststart.m4a
tests/: file_api.rs  test_python_bindings.py
