[workspace]
members = ["cli", "python"]

[workspace.package]
version = "0.0.11"

[package]
name = "m4againrs"
version.workspace = true
edition = "2021"

[lib]
name = "m4againrs"
crate-type = ["rlib"]

[dependencies]
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
